Actually adding index.html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,31 @@
-<h1>test</h1>
-<p>test2 test2 test2</p>
+<h1>Asignment 0</h1>
+<ol>
+	<li>
+		<h3>Your name and what you prefer to be called (if it's different).</h3>
+		<p>Forrest.</p>
+	</li>
+	<li>
+		<h3>Your major and year of study.</h3>
+		<p>Computer Science, and my third year of study, more or less.</p>
+	</li>
+	<li>
+		<h3>Thge (sic.) answer to this question: on a scale from 0 (I've never even seen HTML code) to 10 (You know Facebook? I wrote that.), how confident are you in your web development skills.</h3>
+		<p>About a 5. I have been familiar with, and used the inspect tool for years, and I have a vague understanding of html, css, and php, but my actual usage of them is next to nothing.</p>
+	</li>
+	<li>
+		<h3>The answer to this question: what do you hope to learn from this class?</h3>
+		<p>I would be nice to go from a vague understanding to an actual understanding.</p>
+	</li>
+	<li>
+		<h3>The answer to this question: have you signed up for Piazza?</h3>
+		<p>Yes.</p>
+	</li>
+	<li>
+		<h3>A description of the most interesting fact about you or the most unique experience you've had. Include only what you can think of and write down in two minutes, maximum.</h3>
+		<p>A lot of my free mental processes are usually devoted to designing campaigns for D&D, which I view as somewhat of a prototyping for what I eventually want to do: developing video games.</p>
+	</li>
+	<li>
+		<h3>A photo with a clear picture of your face (using an <img> tag).</h3>
+		<img src="http://i.imgur.com/NRBaisB.jpg" alt="Picture of me" height="816" width ="612">
+	</li>
+</ol>
